--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
       if (event.key === 'Enter') {
         // 取得文字框的值
         var inputText = this.value.trim().toLowerCase();
-
-                if (inputText === 'admin') {
-          // 如果輸入文字是 'admin'，導向指定的 GitHub 頁面
-          window.location.href = 'https://github.com/i-like-dev/index4/edit/main/index.html';
+        
+        if (inputText === 'admin') {
+          // 如果輸入文字是 'admin'，在新分頁中顯示 GitHub 頁面
+          window.open('https://github.com/i-like-dev/index4/edit/main/index.html', '_blank');
           return;
         }
 
