--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
           'user1': '人員驗證成功，請進，您所使用的帳號為：步行貓團隊',
           'user2': '人員驗證成功，請進，您所使用的帳號為：celia',
           'user3': '人員驗證成功，請進，您所使用的帳號為：owen',
+          '0000': '人員驗證成功，請進，您所使用的帳號為：步行貓團隊',
+          '0202': '人員驗證成功，請進，您所使用的帳號為：celia',
+          '0828': '人員驗證成功，請進，您所使用的帳號為：owen',
         };
 
         // 檢查輸入文字是否存在於語音映射中
