--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
           '0000': '人員驗證成功，請進，您所使用的帳號為：步行貓團隊',
           '0202': '人員驗證成功，請進，您所使用的帳號為：celia',
           '0828': '人員驗證成功，請進，您所使用的帳號為：owen',
+          '1234': '申請無卡通過成功，歡迎進入',
         };
 
         // 檢查輸入文字是否存在於語音映射中
