--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           '0202': '人員驗證成功，請進，您所使用的帳號為：celia',
           '0828': '人員驗證成功，請進，您所使用的帳號為：owen',
           '1234': '申請無卡通過成功，歡迎進入',
+          '0008795769': '臨時卡申請成功，請進入！',
         };
 
         // 檢查輸入文字是否存在於語音映射中
